fix(CodeSnippet): right-align overflow indicator if no copy button

--- a/packages/components/src/components/code-snippet/_code-snippet.scss
+++ b/packages/components/src/components/code-snippet/_code-snippet.scss
@@ -502,6 +502,10 @@
     right: $carbon--spacing-08;
   }
 
+  .#{$prefix}--snippet--single .#{$prefix}--snippet__overflow-indicator--flush {
+    right: 0;
+  }
+
   .#{$prefix}--snippet--single
     .#{$prefix}--snippet-container:focus
     ~ .#{$prefix}--snippet__overflow-indicator--right {
